# Prototype3

./: CITATION.cff  Mathematical_Ascii.txt  Mathmatical_Latex.md  README.md  WHITE_PAPER.md  github_safe_testbed.py  holy_grail_experiments.py  holy_grail_experiments.py.txt  pyproject.toml  replication.md  requirements.txt
.github/workflows/: prototype3.yml
arxiv_submission/: arxiv_upload_instructions.txt  main.tex  references.bib
