[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hololifex6"
version = "0.1.0"
description = "Pulse-Coupled Emergent Intelligence System"
authors = [
    {name = "HoloLifeX6 Team"},
]
dependencies = [
    "numpy>=1.21.0",
    "psutil>=5.8.0", 
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]